Flex&Bison/pyparser.output
Terminals which are not used

   DEFINED


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input class_def
    3      | input func_def
    4      | input error

    5 class_def: CLASS classname inheritance COLON suite

    6 classname: ID

    7 inheritance: /* empty */
    8            | LBRACE class_args_list RBRACE

    9 class_args_list: /* empty */
   10                | class_arg

   11 class_arg: ID
   12          | class_arg COMMA
   13          | class_arg ID
   14          | class_arg DOT

   15 func_def: DEF funcname LBRACE func_args_list RBRACE COLON suite

   16 funcname: ID

   17 func_args_list: /* empty */
   18               | func_arg

   19 func_arg: dotted_name
   20         | star_arg
   21         | func_arg OTHER
   22         | func_arg COMMA
   23         | func_arg dotted_name
   24         | func_arg star_arg
   25         | func_arg MESSAGE

   26 star_arg: STAR ID
   27         | STAR STAR ID

   28 dotted_name: ID
   29            | dotted_name DOT ID

   30 suite: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256) 4
CLASS (258) 5
DEFINED (259)
COLON (260) 5 15
DOT (261) 14 29
LBRACE (262) 8 15
RBRACE (263) 8 15
ID (264) 6 11 13 16 26 27 28 29
OTHER (265) 21
DEF (266) 15
COMMA (267) 12 22
STAR (268) 26 27
MESSAGE (269) 25


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
input (16)
    on left: 1 2 3 4, on right: 0 2 3 4
class_def (17)
    on left: 5, on right: 2
classname (18)
    on left: 6, on right: 5
inheritance (19)
    on left: 7 8, on right: 5
class_args_list (20)
    on left: 9 10, on right: 8
class_arg (21)
    on left: 11 12 13 14, on right: 10 12 13 14
func_def (22)
    on left: 15, on right: 3
funcname (23)
    on left: 16, on right: 15
func_args_list (24)
    on left: 17 18, on right: 15
func_arg (25)
    on left: 19 20 21 22 23 24 25, on right: 18 21 22 23 24 25
star_arg (26)
    on left: 26 27, on right: 20 24
dotted_name (27)
    on left: 28 29, on right: 19 23 29
suite (28)
    on left: 30, on right: 5 15


state 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


state 1

    0 $accept: input . $end
    2 input: input . class_def
    3      | input . func_def
    4      | input . error

    $end   shift, and go to state 2
    error  shift, and go to state 3
    CLASS  shift, and go to state 4
    DEF    shift, and go to state 5

    class_def  go to state 6
    func_def   go to state 7


state 2

    0 $accept: input $end .

    $default  accept


state 3

    4 input: input error .

    $default  reduce using rule 4 (input)


state 4

    5 class_def: CLASS . classname inheritance COLON suite

    ID  shift, and go to state 8

    classname  go to state 9


state 5

   15 func_def: DEF . funcname LBRACE func_args_list RBRACE COLON suite

    ID  shift, and go to state 10

    funcname  go to state 11


state 6

    2 input: input class_def .

    $default  reduce using rule 2 (input)


state 7

    3 input: input func_def .

    $default  reduce using rule 3 (input)


state 8

    6 classname: ID .

    $default  reduce using rule 6 (classname)


state 9

    5 class_def: CLASS classname . inheritance COLON suite

    LBRACE  shift, and go to state 12

    $default  reduce using rule 7 (inheritance)

    inheritance  go to state 13


state 10

   16 funcname: ID .

    $default  reduce using rule 16 (funcname)


state 11

   15 func_def: DEF funcname . LBRACE func_args_list RBRACE COLON suite

    LBRACE  shift, and go to state 14


state 12

    8 inheritance: LBRACE . class_args_list RBRACE

    ID  shift, and go to state 15

    $default  reduce using rule 9 (class_args_list)

    class_args_list  go to state 16
    class_arg        go to state 17


state 13

    5 class_def: CLASS classname inheritance . COLON suite

    COLON  shift, and go to state 18


state 14

   15 func_def: DEF funcname LBRACE . func_args_list RBRACE COLON suite

    ID    shift, and go to state 19
    STAR  shift, and go to state 20

    $default  reduce using rule 17 (func_args_list)

    func_args_list  go to state 21
    func_arg        go to state 22
    star_arg        go to state 23
    dotted_name     go to state 24


state 15

   11 class_arg: ID .

    $default  reduce using rule 11 (class_arg)


state 16

    8 inheritance: LBRACE class_args_list . RBRACE

    RBRACE  shift, and go to state 25


state 17

   10 class_args_list: class_arg .
   12 class_arg: class_arg . COMMA
   13          | class_arg . ID
   14          | class_arg . DOT

    DOT    shift, and go to state 26
    ID     shift, and go to state 27
    COMMA  shift, and go to state 28

    $default  reduce using rule 10 (class_args_list)


state 18

    5 class_def: CLASS classname inheritance COLON . suite

    $default  reduce using rule 30 (suite)

    suite  go to state 29


state 19

   28 dotted_name: ID .

    $default  reduce using rule 28 (dotted_name)


state 20

   26 star_arg: STAR . ID
   27         | STAR . STAR ID

    ID    shift, and go to state 30
    STAR  shift, and go to state 31


state 21

   15 func_def: DEF funcname LBRACE func_args_list . RBRACE COLON suite

    RBRACE  shift, and go to state 32


state 22

   18 func_args_list: func_arg .
   21 func_arg: func_arg . OTHER
   22         | func_arg . COMMA
   23         | func_arg . dotted_name
   24         | func_arg . star_arg
   25         | func_arg . MESSAGE

    ID       shift, and go to state 19
    OTHER    shift, and go to state 33
    COMMA    shift, and go to state 34
    STAR     shift, and go to state 20
    MESSAGE  shift, and go to state 35

    $default  reduce using rule 18 (func_args_list)

    star_arg     go to state 36
    dotted_name  go to state 37


state 23

   20 func_arg: star_arg .

    $default  reduce using rule 20 (func_arg)


state 24

   19 func_arg: dotted_name .
   29 dotted_name: dotted_name . DOT ID

    DOT  shift, and go to state 38

    $default  reduce using rule 19 (func_arg)


state 25

    8 inheritance: LBRACE class_args_list RBRACE .

    $default  reduce using rule 8 (inheritance)


state 26

   14 class_arg: class_arg DOT .

    $default  reduce using rule 14 (class_arg)


state 27

   13 class_arg: class_arg ID .

    $default  reduce using rule 13 (class_arg)


state 28

   12 class_arg: class_arg COMMA .

    $default  reduce using rule 12 (class_arg)


state 29

    5 class_def: CLASS classname inheritance COLON suite .

    $default  reduce using rule 5 (class_def)


state 30

   26 star_arg: STAR ID .

    $default  reduce using rule 26 (star_arg)


state 31

   27 star_arg: STAR STAR . ID

    ID  shift, and go to state 39


state 32

   15 func_def: DEF funcname LBRACE func_args_list RBRACE . COLON suite

    COLON  shift, and go to state 40


state 33

   21 func_arg: func_arg OTHER .

    $default  reduce using rule 21 (func_arg)


state 34

   22 func_arg: func_arg COMMA .

    $default  reduce using rule 22 (func_arg)


state 35

   25 func_arg: func_arg MESSAGE .

    $default  reduce using rule 25 (func_arg)


state 36

   24 func_arg: func_arg star_arg .

    $default  reduce using rule 24 (func_arg)


state 37

   23 func_arg: func_arg dotted_name .
   29 dotted_name: dotted_name . DOT ID

    DOT  shift, and go to state 38

    $default  reduce using rule 23 (func_arg)


state 38

   29 dotted_name: dotted_name DOT . ID

    ID  shift, and go to state 41


state 39

   27 star_arg: STAR STAR ID .

    $default  reduce using rule 27 (star_arg)


state 40

   15 func_def: DEF funcname LBRACE func_args_list RBRACE COLON . suite

    $default  reduce using rule 30 (suite)

    suite  go to state 42


state 41

   29 dotted_name: dotted_name DOT ID .

    $default  reduce using rule 29 (dotted_name)


state 42

   15 func_def: DEF funcname LBRACE func_args_list RBRACE COLON suite .

    $default  reduce using rule 15 (func_def)
